# chatbot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260708_phase2_initial_schema.py  20260709_email_verification.py  20260709_perf_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/: auth_deps.py  deps.py  router.py
backend/app/api/routers/: admin.py  (+9 more)
backend/app/core/: __init__.py  config.py  deps.py  embedding_cache.py  logging.py  metrics.py  middleware.py  rate_limit.py  rate_limit_middleware.py  redis.py  security.py  security_headers.py
backend/app/db/: __init__.py  enums.py  mixins.py  session.py
backend/app/embeddings/: __init__.py  factory.py  ollama_provider.py  openai_provider.py  protocol.py  store.py
backend/app/llm/: __init__.py  factory.py  ollama_provider.py  openai_provider.py  protocol.py
backend/app/rag/: __init__.py  chunking.py  citations.py  hybrid.py  mmr.py  prompts.py  retrieval.py
backend/app/schemas/: admin.py  auth.py  chat.py  dashboard.py  documents.py  health.py  organizations.py  search.py  settings.py
backend/app/services/: __init__.py  admin.py  auth.py  chat.py  dashboard.py  documents.py  health.py  indexing.py  knowledge_retrieval.py  organizations.py  search.py  user_settings.py
backend/app/utils/: email.py  files.py  queue.py  slug.py
backend/app/workers/: __init__.py  base.py  db.py  ingest.py  settings.py
(+163 files in other folders)
