[project]
name = "knowledge-chatbot-backend"
version = "0.1.0"
description = "Grounded RAG chatbot API"
requires-python = ">=3.11"
readme = "../README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
